[package]
name = "agilent_asp_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
itertools = "0.10.5"
itertools-num = "0.1.3"
polars = {version = "0.30.0", features = ["csv"]}
serde = {version = "1.0.164", features = ["derive"]}
walkdir = "2.3.3"
